--- a/four_card/style.css
+++ b/four_card/style.css
@@ -25,7 +25,6 @@
 
 .text-preset-1{
     font-family: "Poppins Bold";
-    /* font-size: 36px; */
     font-weight: 600;
     color: var(--grey-500);
     line-height: 140%;
@@ -33,7 +32,6 @@
 }
 .text-preset-2{
     font-family: "Poppins Extra Light";
-    /* font-size: 36px; */
     font-weight: 200;
     color: var(--grey-500);
     line-height: 140%;
@@ -85,7 +83,15 @@ h1, h2, h3, p{
 }
 
 @media screen and (max-width: 375px){
-    .text-preset-1, .text-preset-2{
+    .text-preset-1{
+        font-family: "Poppins Regular";
+        font-size: 15px;
+        font-weight: 400;
+        color: var(--grey-500);
+        line-height: 140%;
+        letter-spacing: 0.1px;
+    }
+    .text-preset-2{
         font-size: 24px;
     }
     .content_wrapper{
@@ -97,7 +103,7 @@ h1, h2, h3, p{
         gap: 32px 0;
     }
     body{
-        margin: 56px 30px 0 30px;
+        margin: 56px 30px 46px 30px;
     }
 }
 
@@ -108,6 +114,7 @@ h1, h2, h3, p{
     .content_wrapper{
         flex-direction: column;
         gap: 32px 0;
+        margin: 0 50px 0 50px;  
     }
     .card_wrapper{
         flex-direction: row;
@@ -115,6 +122,7 @@ h1, h2, h3, p{
         width: 100%;
     }
     .card{
+        max-width: 314px;
         width: calc(100%/2);
     }
     body{
@@ -129,6 +137,7 @@ h1, h2, h3, p{
     .content_wrapper{
         flex-direction: row;
         gap: 0 32px;
+        margin: 0 50px 0 50px;
     }
 
     .card_wrapper{
@@ -143,9 +152,12 @@ h1, h2, h3, p{
     }
 }
 
-body{
+html{
     height: 100vh;
     width: 100vw;
+}
+
+body{
     background-color: var(--bg-white);
     display: flex;
     flex-direction: column;
@@ -162,8 +174,6 @@ body{
     gap: 16px 0;
     max-width: 540px;
     text-align: center;
-    margin: 0 29px 0 29px;
-
 }
 
 .text{
@@ -176,7 +186,6 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 50px 0 50px;
     min-width: 80%;
     box-sizing: border-box;
 }
