--- a/meet-landing-page/style.css
+++ b/meet-landing-page/style.css
@@ -1,46 +1,386 @@
 @font-face{
     font-family: "Red Hat";
-    src: url(assets/font/RedHatDisplay-Black.ttf);
-    font-weight: 900;
+    src: url(assets/font/RedHatDisplay-VariableFont_wght.ttf);
+    /* font-weight: 900; */
 }
-@font-face{
+/* @font-face{
     font-family: "Red Hat";
     src: url(assets/font/RedHatDisplay-Medium.ttf);
     font-weight: 500;
-}
+} */
 
 :root{
-    --white:      #FAFAFA;
-    --blue-300:   #8FE3F9;
-    --blue-600:   #4D96A9;
-    --purple-300: #D9B8FF;
-    --purple-600: #855FB1;
-    --grey-300:   #D1D1DF;
-    --grey-600:   #87879D;
-    --grey-900:   #28283D;
+    --white:        #FAFAFA;
+    --blue-300:     #8FE3F9;
+    --blue-600:     #4D96A9;
+    --blue-hover:   #71C0D4;
+    --purple-300:   #D9B8FF;
+    --purple-600:   #855FB1;
+    --purple-hover: #B18BDD;
+    --grey-300:     #D1D1DF;
+    --grey-600:     #87879D;
+    --grey-900:     #28283D;
 
-    --text-preset-1: 900 64px/110% "Red Hat";
-    --text-preset-2: 900 40px/110% "Red Hat";
-    --text-preset-3: 900 16px/110% "Red Hat";
-    --text-preset-4: 500 18px/110% "Red Hat";
-    --text-preset-5: 900 16px/150% "Red Hat";
+}
+
+@media screen and (max-width: 375px){
+    *{
+        --text-preset-1: 900 4rem/  110% "Red Hat";
+        --text-preset-2: 900 3.2rem/110% "Red Hat";
+        --text-preset-3: 900 1.2rem/110% "Red Hat";
+        --text-preset-4: 500 1.6rem/150% "Red Hat";
+        /* --text-preset-4: 500 18px/150% "Red Hat"; */
+        --left: 3.2rem;
+        --right: 3.2rem;
+        --row-gap: 2.4rem;
+        --column-gap: 2.4rem;
+    }
+    .logo{
+        --top: 4.8rem;
+        --bottom: 0;
+    }
+    header{
+        --top: 6.4rem;
+        --bottom: 3.2rem;
+        padding:          var(--top) var(--right) var(--bottom) var(--left);
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 72px;
+    }
+    main{
+        --top: 3.2rem;
+        --bottom: 6.4rem;
+    }
+    footer{
+        --top:            6.4rem;
+        --bottom:         6.4rem;
+        height:           320px;
+        justify-content:  center;
+        align-items:      center;
+        background-image: 
+            linear-gradient(to top, rgba(77, 151, 169, 0.9), rgb(77, 150, 169, 0.9)),
+            url(assets/tablet/image-footer.jpg);
+    }
+    .conteiner{
+        flex-direction:   column;
+        justify-content:  center;
+        align-items:      center;
+        text-align:       center;
+        width:            50.4rem;
+    }
+    .left_img{
+        width: 208px;
+        height: 160px;
+        grid-column: 1/2;
+        grid-row: 1/2;
+        left: -26px;
+    }
+    .right_img{
+        width: 208px;
+        height: 160px;
+        grid-column: 2/3;
+        grid-row: 1/2;
+        right: -6px;
+    }
+    .text_group{
+        grid-column: 1/3;
+        grid-row: 2/3;
+        width: 100%;
+    }
+    .text_group h1{
+        text-wrap-style: balance;
+    }
+    .button_group{
+        flex-flow:        column wrap;
+    }
+    .gallery{
+        flex-wrap: wrap;
+    }
+    .gallery img{
+        height: 144px;
+        width: calc((100% - 3 * 16px) / 2);
+    }
+}
+
+@media screen and (min-width: 376px) and (max-width: 768px){
+    *{
+        --text-preset-1: 900 4.8rem/110% "Red Hat";
+        --text-preset-2: 900 3.6rem/110% "Red Hat";
+        --text-preset-3: 900 1.4rem/110% "Red Hat";
+        --text-preset-4: 500 1.6rem/150% "Red Hat";
+        --text-preset-5: 900 1.6rem/150% "Red Hat";
+
+        --left: 3.2rem;
+        --right: 3.2rem;
+        --row-gap: 2.4rem;
+        --column-gap: 2.4rem;
+    }
+    .logo{
+        --top: 4.8rem;
+        --bottom: 0;
+    }
+    header{
+        --top: 6.4rem;
+        --bottom: 6.4rem;
+        padding:          var(--top) 0 var(--bottom) 0;
+        grid-template-columns: repeat(2, 1fr);
+        row-gap: 72px;
+    }
+    .left_img{
+        grid-column: 1/2;
+        grid-row: 1/2;
+        left: -26px;
+    }
+    .right_img{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        right: -6px;
+    }
+    .text_group{
+        grid-column: 1/3;
+        grid-row: 2/3;
+    }
+    .text_group h1{
+        text-wrap-style: balance;
+    }
+    .button_group{
+        flex-flow:        row wrap;
+    }
+    main{
+        --top: 5.6rem;
+        --bottom: 6.4rem;
+    }
+    footer{
+        --top:            6.4rem;
+        --bottom:         6.4rem;
+        height:           320px;
+        justify-content:  center;
+        align-items:      center;
+        background-image: 
+            linear-gradient(to top, rgba(77, 151, 169, 0.9), rgb(77, 150, 169, 0.9)),
+            url(assets/tablet/image-footer.jpg);
+    }
+    .conteiner{
+        flex-direction:   column;
+        justify-content:  center;
+        align-items:      center;
+        text-align:       center;
+        width:            50.4rem;
+    }
+    .gallery img{
+        height: 160px;
+        width: calc((100% - 3 * 24px) / 4);
+    }
+}
+
+@media screen and (min-width: 769px){
+    *{
+        --text-preset-1: 900 6.4rem/110% "Red Hat";
+        --text-preset-2: 900 4rem/  110% "Red Hat";
+        --text-preset-3: 900 1.6rem/110% "Red Hat";
+        --text-preset-4: 500 1.8rem/150% "Red Hat";
+        --text-preset-5: 900 1.6rem/150% "Red Hat";
+        --left:          8rem;
+        --right:         8rem;
+        --row-gap:       3.2rem;
+        --column-gap:    3.2rem;
+    }
+    .logo{
+        --top: 8rem;
+        --bottom: 0;
+    }
+    header{
+        --top: 6.4rem;
+        --bottom: 6.4rem;
+        padding:          var(--top) 0 var(--bottom) 0;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: var(--column-gap);
+        height: 48.8rem;
+    }
+    main{
+        --top: 5.6rem;
+        --bottom: 7.2rem;
+    }
+    footer{
+        --top:    11.2rem;
+        --left:   16rem;
+        --right:  16rem;
+        --bottom: 11.2rem;
+        justify-content:  center;
+        align-items:      center;
+        background-image: 
+            linear-gradient(to top, rgba(77, 151, 169, 0.9), rgb(77, 150, 169, 0.9)),
+            url(assets/desktop/image-footer.jpg);
+    }
+    .conteiner{
+        flex-direction:   row;
+        justify-content:  center;
+        align-items:      flex-start;
+    }
+    .left_img{
+        left: -5.8rem;
+    }
+    .right_img{
+        right: -5.8rem;
+    }
+    .gallery img{
+        height: 256px;
+        width: calc((100% - 3 * 32px) / 4);
+    }
+    .button_group{
+        flex-flow:        row wrap;
+    }
+}
+
+
+
+
+html{
+    font-size:        62.5%;
 }
 
 body{
-    width: 100vw;
-    min-height: 100vh;
-    margin: 0;
+    width:            100vw;
+    min-height:       100vh;
+    margin:           0;
+    display:          flex;
+    flex-direction:   column;
+    align-items:      center;
+    background-color: var(--white);
 }
-
 .logo{
-    
+    width:            100%;
+    padding:          var(--top) var(--right) var(--bottom) var(--left);
+    box-sizing:       border-box;
+    display:          flex;
+    justify-content:  center;
+    align-items:      flex-end;
 }
-
 header{
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
-    gap: 0 32px;
+    width:            100%;
+    box-sizing:       border-box;
+    display:          grid;
+    justify-items:    center;
+    align-items:      center;
+    overflow-x:       hidden;
+    text-align:       center;
 }
-
+main{
+    width:            100%;
+    padding:          var(--top) var(--right) var(--bottom) var(--left);
+    box-sizing:       border-box;
+    display:          flex;
+    flex-direction:   column;
+    justify-content:  center;
+    align-items:      center;
+    gap:              6.4rem 0;
+}
+.arrow_2{
+    height:           calc(136px - 28px);
+}
+footer{
+    width:            100vw;
+    padding:          var(--top) var(--right) var(--bottom) var(--left);
+    box-sizing:       border-box;
+    display:          flex;
+    z-index:          -1;
+}
+.conteiner{
+    display:          flex;
+    gap:              var(--row-gap) var(--column-gap);
+}
+.left_img{
+    position:         relative;
+    align-self:       flex-start;
+}
+.right_img{
+    position:         relative;
+    align-self:       flex-end;
+}
+.text_group{
+    display:          flex;
+    flex-flow:        column nowrap;
+    justify-content:  center;
+    align-items:      center;
+    gap:              var(--row-gap) 0;
+    text-align:       center;
+    /* width: 54.4rem; */
+}
+header .text_group{
+    max-width:        44.83rem;
+}
+main .text_group{
+    max-width:        54.4rem;
+}
+.title{
+    width:            44.5rem;
+    display:          flex;
+    flex-flow:        column nowrap;
+    gap:              1.6rem 0;
+}
+.button_group{
+    display:          flex;
+    justify-content:  center;
+    align-items:      center;
+    gap:              0 1.7rem;
+}
+.gallery{
+    width:            100%;
+    box-sizing:       border-box;
+    display:          flex;
+    flex-flow:        row wrap;
+    justify-content:  center;
+    align-items:      center;
+    gap:              0 var(--column-gap);
+}
+.gallery img{
+    border-radius:    8px;
+    object-fit:       cover;
+}
+/* ------------------------------------------- */
+h1{
+    font:             var(--text-preset-1);
+    color:            var(--grey-900);
+    margin:           0;
+}
+h2{
+    font:             var(--text-preset-2);
+    margin:           0;
+}
+main h2{
+    color:            var(--grey-900);
+}
+footer h2{
+    color:            var(--white);
+}
+.description{
+    font:             var(--text-preset-4);
+    color:            var(--grey-600);
+}
+footer .description{
+    color:            var(--white);
+}
+.blue_text{
+    font:             var(--text-preset-3);
+    color:            var(--blue-600);
+    text-transform:   uppercase;
+    letter-spacing:   4px;
+}
+.button{
+    padding:          16px 40px 16px 40px;
+    border-radius:    29px;
+    font:             var(--text-preset-5);
+    color:            var(--white);
+    text-wrap:        nowrap;
+}
+.blue.button{
+    background-color: var(--blue-600);
+}
+.blue.button:hover{
+    background-color: var(--blue-hover);
+}
+.purple.button{
+    background-color: var(--purple-600);
+}
+.purple.button:hover{
+    background-color: var(--purple-hover);
+}
