meet landing page finished

--- a/meet-landing-page/style.css
+++ b/meet-landing-page/style.css
@@ -1,13 +1,7 @@
 @font-face{
     font-family: "Red Hat";
     src: url(assets/font/RedHatDisplay-VariableFont_wght.ttf);
-    /* font-weight: 900; */
 }
-/* @font-face{
-    font-family: "Red Hat";
-    src: url(assets/font/RedHatDisplay-Medium.ttf);
-    font-weight: 500;
-} */
 
 :root{
     --white:        #FAFAFA;
@@ -29,75 +23,82 @@
         --text-preset-2: 900 3.2rem/110% "Red Hat";
         --text-preset-3: 900 1.2rem/110% "Red Hat";
         --text-preset-4: 500 1.6rem/150% "Red Hat";
-        /* --text-preset-4: 500 18px/150% "Red Hat"; */
-        --left: 3.2rem;
-        --right: 3.2rem;
-        --row-gap: 2.4rem;
-        --column-gap: 2.4rem;
+        --text-preset-5: 900 1.6rem/150% "Red Hat";
+        --left:          3.2rem;
+        --right:         3.2rem;
+        --row-gap:       1.6rem;
+        --column-gap:    1.6rem;
     }
     .logo{
-        --top: 4.8rem;
-        --bottom: 0;
+        --top:           4.8rem;
+        --bottom:        0;
     }
     header{
-        --top: 6.4rem;
-        --bottom: 3.2rem;
-        padding:          var(--top) var(--right) var(--bottom) var(--left);
-        grid-template-columns: repeat(2, 1fr);
-        row-gap: 72px;
+        --top:           6.4rem;
+        --bottom:        3.2rem;
+        padding:         var(--top) var(--right) var(--bottom) var(--left);
+        grid-template-columns: repeat(2, 152.5px);
+        row-gap:         4.8rem;
     }
     main{
-        --top: 3.2rem;
-        --bottom: 6.4rem;
+        --top:           3.2rem;
+        --bottom:        6.4rem;
     }
     footer{
-        --top:            6.4rem;
-        --bottom:         6.4rem;
-        height:           320px;
-        justify-content:  center;
-        align-items:      center;
+        --top:           6.4rem;
+        --bottom:        6.4rem;
+        --row-gap:       2.4rem;
+        height:          100%;
+        flex-direction:  column;
+        justify-content: center;
+        align-items:     center;
+        text-align:      center;
         background-image: 
             linear-gradient(to top, rgba(77, 151, 169, 0.9), rgb(77, 150, 169, 0.9)),
             url(assets/tablet/image-footer.jpg);
     }
     .conteiner{
-        flex-direction:   column;
-        justify-content:  center;
-        align-items:      center;
-        text-align:       center;
-        width:            50.4rem;
+        justify-items:   center;
+        align-items:     center;
+        max-width:       31.1rem;
     }
     .left_img{
-        width: 208px;
-        height: 160px;
-        grid-column: 1/2;
-        grid-row: 1/2;
-        left: -26px;
+        width:           208px;
+        height:          160px;
+        grid-column:     1/2;
+        grid-row:        1/2;
+        left:            -33px;
     }
     .right_img{
-        width: 208px;
-        height: 160px;
-        grid-column: 2/3;
-        grid-row: 1/2;
-        right: -6px;
+        width:           208px;
+        height:          160px;
+        grid-column:     2/3;
+        grid-row:        1/2;
+        right:           -39px;
     }
     .text_group{
-        grid-column: 1/3;
-        grid-row: 2/3;
-        width: 100%;
+        grid-column:     1/3;
+        grid-row:        2/3;
+        width:           100%;
+    }
+    header .text_group{
+        --row-gap:       2.4rem;
+    }
+    main .text_group{
+        --row-gap:       3.2rem;
     }
     .text_group h1{
-        text-wrap-style: balance;
+        text-wrap:       balance;
     }
     .button_group{
-        flex-flow:        column wrap;
+        flex-flow:       column wrap;
     }
     .gallery{
-        flex-wrap: wrap;
+        flex-wrap:       wrap;
     }
     .gallery img{
-        height: 144px;
-        width: calc((100% - 3 * 16px) / 2);
+        height:          144px;
+        width:           calc((100% - var(--column-gap)) / 2);
     }
 }
 
@@ -108,67 +109,66 @@
         --text-preset-3: 900 1.4rem/110% "Red Hat";
         --text-preset-4: 500 1.6rem/150% "Red Hat";
         --text-preset-5: 900 1.6rem/150% "Red Hat";
-
-        --left: 3.2rem;
-        --right: 3.2rem;
-        --row-gap: 2.4rem;
-        --column-gap: 2.4rem;
+        --left:          3.2rem;
+        --right:         3.2rem;
+        --row-gap:       2.4rem;
+        --column-gap:    2.4rem;
     }
     .logo{
-        --top: 4.8rem;
-        --bottom: 0;
+        --top:           4.8rem;
+        --bottom:        0;
     }
     header{
-        --top: 6.4rem;
-        --bottom: 6.4rem;
-        padding:          var(--top) 0 var(--bottom) 0;
+        --top:           6.4rem;
+        --bottom:        6.4rem;
+        padding:         var(--top) 0 var(--bottom) 0;
         grid-template-columns: repeat(2, 1fr);
-        row-gap: 72px;
+        row-gap:         72px;
     }
     .left_img{
-        grid-column: 1/2;
-        grid-row: 1/2;
-        left: -26px;
+        grid-column:     1/2;
+        grid-row:        1/2;
+        left:            -26px;
     }
     .right_img{
-        grid-column: 2/3;
-        grid-row: 1/2;
-        right: -6px;
+        grid-column:     2/3;
+        grid-row:        1/2;
+        right:           -6px;
     }
     .text_group{
-        grid-column: 1/3;
-        grid-row: 2/3;
+        grid-column:     1/3;
+        grid-row:        2/3;
     }
     .text_group h1{
-        text-wrap-style: balance;
+        text-wrap:       balance;
     }
     .button_group{
-        flex-flow:        row wrap;
+        flex-flow:       row wrap;
     }
     main{
-        --top: 5.6rem;
-        --bottom: 6.4rem;
+        --top:           5.6rem;
+        --bottom:        6.4rem;
     }
     footer{
-        --top:            6.4rem;
-        --bottom:         6.4rem;
-        height:           320px;
-        justify-content:  center;
-        align-items:      center;
+        --top:           6.4rem;
+        --bottom:        6.4rem;
+        height:          320px;
+        flex-direction:  column;
+        justify-content: center;
+        align-items:     center;
+        text-align:      center;
         background-image: 
             linear-gradient(to top, rgba(77, 151, 169, 0.9), rgb(77, 150, 169, 0.9)),
             url(assets/tablet/image-footer.jpg);
     }
     .conteiner{
-        flex-direction:   column;
-        justify-content:  center;
-        align-items:      center;
-        text-align:       center;
-        width:            50.4rem;
+        justify-items:   center;
+        align-items:     center;
+        max-width:       50.4rem;
     }
     .gallery img{
-        height: 160px;
-        width: calc((100% - 3 * 24px) / 4);
+        height:          160px;
+        width:           calc((100% - 3 * var(--column-gap)) / 4);
     }
 }
 
@@ -185,49 +185,49 @@
         --column-gap:    3.2rem;
     }
     .logo{
-        --top: 8rem;
-        --bottom: 0;
+        --top:           8rem;
+        --bottom:        0;
     }
     header{
-        --top: 6.4rem;
-        --bottom: 6.4rem;
-        padding:          var(--top) 0 var(--bottom) 0;
+        --top:           6.4rem;
+        --bottom:        6.4rem;
+        padding:         var(--top) 0 var(--bottom) 0;
         grid-template-columns: repeat(3, 1fr);
-        column-gap: var(--column-gap);
-        height: 48.8rem;
+        column-gap:      var(--column-gap);
+        height:          48.8rem;
     }
     main{
-        --top: 5.6rem;
-        --bottom: 7.2rem;
+        --top:           5.6rem;
+        --bottom:        7.2rem;
     }
     footer{
-        --top:    11.2rem;
-        --left:   16rem;
-        --right:  16rem;
-        --bottom: 11.2rem;
-        justify-content:  center;
-        align-items:      center;
+        --top:           11.2rem;
+        --left:          16rem;
+        --right:         16rem;
+        --bottom:        11.2rem;
+        justify-content: center;
+        align-items:     center;
         background-image: 
             linear-gradient(to top, rgba(77, 151, 169, 0.9), rgb(77, 150, 169, 0.9)),
             url(assets/desktop/image-footer.jpg);
     }
     .conteiner{
-        flex-direction:   row;
-        justify-content:  center;
-        align-items:      flex-start;
+        grid-template-columns: 39.73% 31.7% 22.86%;
+        justify-items:   flex-end;
+        align-items:     flex-start;
     }
     .left_img{
-        left: -5.8rem;
+        left:            -5.8rem;
     }
     .right_img{
-        right: -5.8rem;
+        right:           -5.8rem;
     }
     .gallery img{
-        height: 256px;
-        width: calc((100% - 3 * 32px) / 4);
+        height:          256px;
+        width:           calc((100% - 3 * 32px) / 4);
     }
     .button_group{
-        flex-flow:        row wrap;
+        flex-flow:       row wrap;
     }
 }
 
@@ -276,16 +276,18 @@ main{
 }
 .arrow_2{
     height:           calc(136px - 28px);
+    z-index:          2;
 }
 footer{
     width:            100vw;
     padding:          var(--top) var(--right) var(--bottom) var(--left);
     box-sizing:       border-box;
     display:          flex;
-    z-index:          -1;
+    gap:              var(--row-gap) var(--column-gap);
+    z-index:          1;
 }
 .conteiner{
-    display:          flex;
+    display:          grid;
     gap:              var(--row-gap) var(--column-gap);
 }
 .left_img{
@@ -303,7 +305,6 @@ footer{
     align-items:      center;
     gap:              var(--row-gap) 0;
     text-align:       center;
-    /* width: 54.4rem; */
 }
 header .text_group{
     max-width:        44.83rem;
@@ -312,7 +313,7 @@ main .text_group{
     max-width:        54.4rem;
 }
 .title{
-    width:            44.5rem;
+    max-width:        44.5rem;
     display:          flex;
     flex-flow:        column nowrap;
     gap:              1.6rem 0;
@@ -321,16 +322,16 @@ main .text_group{
     display:          flex;
     justify-content:  center;
     align-items:      center;
-    gap:              0 1.7rem;
+    gap:              1.6rem 1.7rem;
 }
 .gallery{
-    width:            100%;
+    /* width:            100%; */
     box-sizing:       border-box;
     display:          flex;
     flex-flow:        row wrap;
     justify-content:  center;
     align-items:      center;
-    gap:              0 var(--column-gap);
+    gap:              var(--row-gap) var(--column-gap);
 }
 .gallery img{
     border-radius:    8px;
@@ -371,6 +372,7 @@ footer .description{
     font:             var(--text-preset-5);
     color:            var(--white);
     text-wrap:        nowrap;
+    width:            fit-content;
 }
 .blue.button{
     background-color: var(--blue-600);
